--- a/package.json
+++ b/package.json
@@ -11,39 +11,34 @@
   "license": "UNLICENSED",
   "scripts": {
     "dev": "next dev",
-    "sitemap": "node ./bin/sitemap.js",
     "postinstall": "./bin/build-styles",
     "start": "NODE_ENV=production node server.js",
     "test": "jest",
     "pretest": "standard"
   },
   "dependencies": {
-    "acorn": "^7.0.0",
     "next": "^9.0.3",
     "react": "^16.9.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.9.0",
     "react-fontawesome": "^1.6.1",
-    "react-ga": "^2.6.0",
     "scss-to-json": "^2.0.0"
   },
   "devDependencies": {
     "jest": "^24.8.0",
+    "react-test-renderer": "^16.9.0",
     "standard": "^13.1.0"
   },
   "standard": {
     "ignore": [
-      "static/*",
-      "vendor/*"
+      "static/*"
     ],
     "globals": [
-      "fetch",
-      "FormData",
-      "confirm",
-      "prompt",
       "describe",
       "expect",
-      "it"
+      "it",
+      "beforeEach",
+      "afterEach"
     ]
   }
 }
