--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pretest": "standard"
   },
   "dependencies": {
+    "github-api": "^3.2.2",
     "next": "^9.0.3",
     "react": "^16.9.0",
     "react-bootstrap": "^0.32.4",
