--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.9.0",
     "react-fontawesome": "^1.6.1",
-    "scss-to-json": "^2.0.0"
+    "scss-to-json": "^2.0.0",
+    "trianglify": "^2.0.0"
   },
   "devDependencies": {
     "jest": "^24.8.0",
