--- a/package.json
+++ b/package.json
@@ -19,22 +19,22 @@
   },
   "dependencies": {
     "github-api": "^3.3.0",
-    "next": "^9.1.4",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-dom": "^16.12.0",
+    "next": "^9.3.2",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0",
+    "react-dom": "^16.13.1",
     "react-fontawesome": "^1.7.1",
     "scss-to-json": "^2.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.23",
-    "@types/node": "^12.12.14",
-    "@types/react": "^16.9.15",
-    "@types/react-dom": "^16.9.4",
-    "jest": "^24.9.0",
-    "prettier": "^1.19.1",
-    "react-test-renderer": "^16.12.0",
-    "ts-jest": "^24.2.0",
-    "typescript": "^3.7.3"
+    "@types/jest": "^25.1.4",
+    "@types/node": "^13.9.5",
+    "@types/react": "^16.9.27",
+    "@types/react-dom": "^16.9.5",
+    "jest": "^25.2.3",
+    "prettier": "^2.0.2",
+    "react-test-renderer": "^16.13.1",
+    "ts-jest": "^25.2.1",
+    "typescript": "^3.8.3"
   }
 }
