--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "github-api": "^3.3.0",
-    "next": "^10.0.0",
+    "next": "^10.0.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
@@ -30,10 +30,15 @@
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
-    "jest": "^26.6.1",
+    "jest": "^26.6.3",
     "prettier": "^2.1.2",
     "react-test-renderer": "^17.0.1",
     "ts-jest": "^26.4.3",
     "typescript": "^4.0.5"
+  },
+  "jest": {
+    "setupFiles": [
+      "<rootDir>/setup.jest.js"
+    ]
   }
 }
