--- a/package.json
+++ b/package.json
@@ -19,25 +19,26 @@
   },
   "dependencies": {
     "github-api": "^3.4.0",
-    "next": "^10.2.3",
+    "next": "^11.0.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.6.0",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-fontawesome": "^1.7.1",
     "scss-to-json": "^2.0.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
-    "@types/node": "^15.6.1",
-    "@types/react": "^17.0.8",
-    "@types/react-dom": "^17.0.5",
-    "jest": "^26.6.3",
-    "prettier": "^2.3.0",
+    "@types/node": "^15.12.5",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.8",
+    "jest": "^27.0.6",
+    "prettier": "^2.3.2",
     "react-test-renderer": "^17.0.2",
-    "ts-jest": "^26.5.6",
-    "typescript": "^4.3.2"
+    "ts-jest": "^27.0.3",
+    "typescript": "^4.3.4"
   },
   "jest": {
+    "testEnvironment": "jsdom",
     "setupFiles": [
       "<rootDir>/setup.jest.js"
     ]
