--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "evan@evantahler.com",
   "license": "UNLICENSED",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next-remote-watch pages",
     "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start",
@@ -41,6 +41,7 @@
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "jest": "^27.0.6",
+    "next-remote-watch": "^1.0.0",
     "prettier": "^2.3.2",
     "react-test-renderer": "^17.0.2",
     "ts-jest": "^27.0.4",
