--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-fontawesome": "^1.7.1",
     "react-markdown": "^6.0.2",
     "react-syntax-highlighter": "^15.4.4",
+    "rehype-raw": "^5.1.0",
     "sass": "^1.36.0",
     "scss-to-json": "^2.0.0"
   },
