--- a/package.json
+++ b/package.json
@@ -41,12 +41,14 @@
     "@types/node": "^16.4.2",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
+    "isomorphic-fetch": "^3.0.0",
     "jest": "^27.0.6",
     "next-remote-watch": "^1.0.0",
     "prettier": "^2.3.2",
     "react-test-renderer": "^17.0.2",
     "ts-jest": "^27.0.4",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "xml2json": "^0.12.0"
   },
   "jest": {
     "testEnvironment": "jsdom",
