--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,8 @@ jobs:
           <<: *cache-options
           paths:
             - ./node_modules
+            - ./public/sitemap.xml
+            - ./public/robots.txt
 
   test:
     docker:
