--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,15 +20,10 @@ jobs:
       - run:
           name: npm-install
           command: npm install
-      - run:
-          name: test-reporter-setup
-          command: npm install jest-junit --no-save
       - save_cache:
           <<: *cache-options
           paths:
             - ./node_modules
-            - ./public/sitemap.xml
-            - ./public/robots.txt
 
   test:
     docker:
@@ -41,18 +36,11 @@ jobs:
           name: linter
           command: npm run lint
       - run:
-          name: test-reporter-setup
-          command: mkdir -p ./reports/junit
+          name: build
+          command: ./node_modules/.bin/next build
       - run:
           name: test
-          command: ./node_modules/.bin/jest tests --ci --testResultsProcessor="jest-junit" --runInBand
-          environment:
-            NODE_ENV: test
-            JEST_JUNIT_OUTPUT: reports/junit/jest.xml
-      - store_test_results:
-          path: ./reports/junit/
-      - store_artifacts:
-          path: ./reports/junit/
+          command: ./node_modules/.bin/jest tests --ci
 
 workflows:
   version: 2
