--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@types/glob": "^7.1.4",
     "bootstrap": "^4.6.0",
+    "fuzzysort": "^1.1.4",
     "github-api": "^3.4.0",
     "glob": "^7.1.7",
     "gray-matter": "^4.0.3",
