--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "react-markdown": "^6.0.3",
     "react-syntax-highlighter": "^15.4.5",
     "rehype-raw": "^5.1.0",
-    "sass": "^1.45.1",
-    "scss-to-json": "^2.0.0"
+    "sass": "1.44.0"
   },
   "devDependencies": {
     "@types/jest": "^27.0.3",
