--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-fontawesome": "^1.7.1",
     "react-markdown": "^6.0.3",
     "react-syntax-highlighter": "^15.4.5",
+    "react-tagcloud": "^2.2.0",
     "rehype-raw": "^5.1.0",
     "sass": "1.49.8"
   },
