--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@types/glob": "^7.2.0",
     "bootstrap": "^5.1.3",
+    "bootswatch": "^5.1.3",
     "fuzzysort": "^1.1.4",
     "github-api": "^3.4.0",
     "glob": "^7.2.0",
