--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-syntax-highlighter": "^15.4.5",
     "react-tagcloud": "^2.2.0",
     "rehype-raw": "^5.1.0",
+    "remark-footnotes": "^4.0.1",
     "sass": "1.49.8"
   },
   "devDependencies": {
