--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/react-dom": "^18.0.10",
     "isomorphic-fetch": "^3.0.0",
     "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "next-remote-watch": "^2.0.0",
     "prettier": "^2.8.1",
     "react-test-renderer": "^18.2.0",
