--- a/package.json
+++ b/package.json
@@ -19,40 +19,41 @@
     "lint": "prettier --check pages components __tests__"
   },
   "dependencies": {
-    "@types/glob": "^8.0.0",
+    "@types/glob": "^8.0.1",
     "bootstrap": "^5.2.3",
     "bootswatch": "^5.2.3",
     "fuzzysort": "^2.0.4",
     "github-api": "^3.4.0",
-    "glob": "^8.0.3",
+    "glob": "^8.1.0",
     "gray-matter": "^4.0.3",
-    "next": "^13.1.1",
-    "next-sitemap": "^3.1.43",
+    "next": "^13.1.6",
+    "next-sitemap": "^3.1.48",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
-    "react-calendly": "^4.1.0",
+    "react-calendly": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
-    "react-markdown": "^8.0.4",
+    "react-markdown": "^8.0.5",
     "react-syntax-highlighter": "^15.5.0",
     "react-tagcloud": "^2.3.1",
     "rehype-raw": "^6.1.1",
     "remark-footnotes": "^4.0.1",
-    "sass": "1.57.1"
+    "sass": "1.57.1",
+    "sharp": "^0.31.3"
   },
   "devDependencies": {
-    "@types/jest": "^29.2.5",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.11.18",
-    "@types/react": "^18.0.26",
+    "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "isomorphic-fetch": "^3.0.0",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "next-remote-watch": "^2.0.0",
-    "prettier": "^2.8.1",
+    "prettier": "^2.8.3",
     "react-test-renderer": "^18.2.0",
-    "ts-jest": "^29.0.3",
-    "typescript": "^4.9.4",
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.5",
     "xml2json": "^0.12.0"
   }
 }
