--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test": "jest",
     "pretest": "npm run lint && npm run build && npm run postbuild",
     "lint": "prettier --check pages components __tests__",
+    "pretty": "prettier --write pages components __tests__",
     "sitemap": "next-sitemap"
   },
   "dependencies": {
