--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - name: insrtall pnpm
+        run: npm install -g pnpm
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
