--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "type": "git",
     "url": "github.com:evantahler/evantahler.com"
   },
+  "type": "module",
   "author": "evan@evantahler.com",
   "license": "UNLICENSED",
   "scripts": {
@@ -18,45 +19,45 @@
     "pretest": "npm run lint && npm run build && npm run postbuild",
     "lint": "prettier --check pages components __tests__",
     "pretty": "prettier --write pages components __tests__",
-    "sitemap": "next-sitemap"
+    "sitemap": "next-sitemap --config next-sitemap.config.cjs"
   },
   "dependencies": {
-    "@vercel/analytics": "^1.4.1",
-    "bootstrap": "^5.3.3",
-    "bootswatch": "^5.3.3",
+    "@vercel/analytics": "^1.5.0",
+    "bootstrap": "^5.3.6",
+    "bootswatch": "^5.3.6",
     "fuzzysort": "^3.1.0",
     "github-api": "^3.4.0",
-    "glob": "^9.3.4",
+    "glob": "^11.0.2",
     "gray-matter": "^4.0.3",
-    "next": "^14.2.24",
+    "next": "^15.3.2",
     "next-sitemap": "^4.2.3",
-    "react": "^18.3.1",
-    "react-bootstrap": "^2.10.5",
-    "react-dom": "^18.3.1",
+    "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
+    "react-dom": "^19.1.0",
     "react-fontawesome": "^1.7.1",
-    "react-markdown": "^8.0.7",
+    "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.1",
     "react-tagcloud": "^2.3.3",
-    "rehype-raw": "^6.1.1",
-    "remark-footnotes": "^4.0.1",
-    "sass": "^1.86.1",
-    "sharp": "^0.33.5"
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
+    "sass": "^1.89.0",
+    "sharp": "^0.34.1"
   },
   "devDependencies": {
     "@types/glob": "^8.1.0",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.13.17",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/node": "^22.15.18",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
     "isomorphic-fetch": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "next-remote-watch": "^2.0.0",
-    "prettier": "^3.4.2",
-    "react-test-renderer": "^18.3.1",
-    "ts-jest": "^29.2.5",
+    "prettier": "^3.5.3",
+    "react-test-renderer": "^19.1.0",
+    "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.2",
+    "typescript": "^5.8.3",
     "xml2json": "^0.12.0"
   }
 }
