--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "scripts": {
     "dev": "next-remote-watch pages/blog",
     "build": "next build",
-    "postbuild": "npm run sitemap",
+    "postbuild": "bun run sitemap",
     "start": "next start",
-    "test": "jest",
-    "pretest": "npm run lint && npm run build && npm run postbuild",
+    "test": "bun test",
+    "pretest": "bun run lint && bun run build && bun run postbuild",
     "lint": "prettier --check pages components __tests__",
     "pretty": "prettier --write pages components __tests__",
     "sitemap": "next-sitemap --config next-sitemap.config.cjs"
@@ -44,18 +44,15 @@
     "sharp": "^0.34.2"
   },
   "devDependencies": {
+    "@types/bun": "^1.1.16",
     "@types/glob": "^8.1.0",
-    "@types/jest": "^29.5.14",
     "@types/node": "^22.15.18",
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.5",
     "isomorphic-fetch": "^3.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^25.0.1",
     "next-remote-watch": "^2.0.0",
     "prettier": "^3.5.3",
-    "react-test-renderer": "^19.1.0",
-    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "xml2json": "^0.12.0"
