--- a/package.json
+++ b/package.json
@@ -22,39 +22,40 @@
     "sitemap": "next-sitemap --config next-sitemap.config.cjs"
   },
   "dependencies": {
-    "@vercel/analytics": "^1.5.0",
-    "bootstrap": "^5.3.6",
-    "bootswatch": "^5.3.6",
+    "@vercel/analytics": "^1.6.1",
+    "bootstrap": "^5.3.8",
+    "bootswatch": "^5.3.8",
+    "framer-motion": "^12.27.0",
     "fuzzysort": "^3.1.0",
     "github-api": "^3.4.0",
-    "glob": "^11.1.0",
+    "glob": "^13.0.0",
     "gray-matter": "^4.0.3",
-    "next": "^15.4.7",
+    "next": "^16.1.3",
     "next-sitemap": "^4.2.3",
-    "react": "^19.1.0",
+    "react": "^19.2.3",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "^19.1.0",
+    "react-dom": "^19.2.3",
     "react-fontawesome": "^1.7.1",
     "react-markdown": "^10.1.0",
-    "react-syntax-highlighter": "^15.6.1",
+    "react-syntax-highlighter": "^16.1.0",
     "react-tagcloud": "^2.3.3",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
-    "sass": "^1.89.2",
-    "sharp": "^0.34.2"
+    "sass": "^1.97.2",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
-    "@types/bun": "^1.1.16",
-    "@types/glob": "^8.1.0",
-    "@types/node": "^22.15.18",
-    "@types/react": "^19.1.4",
-    "@types/react-dom": "^19.1.5",
+    "@types/bun": "^1.3.6",
+    "@types/glob": "^9.0.0",
+    "@types/node": "^25.0.9",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
     "isomorphic-fetch": "^3.0.0",
-    "jsdom": "^25.0.1",
+    "jsdom": "^27.4.0",
     "next-remote-watch": "^2.0.0",
-    "prettier": "^3.5.3",
+    "prettier": "^3.8.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3",
+    "typescript": "^5.9.3",
     "xml2json": "^0.12.0"
   }
 }
